--- a/Day_004_HW.ipynb
+++ b/Day_004_HW.ipynb
@@ -34,10 +34,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
@@ -47,14 +45,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# 設定 data_path\n",
-    "dir_data = './data/'"
+    "dir_data = \"F:\\ML_homework\""
    ]
   },
   {
@@ -85,7 +81,10 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "row_counter, column_counter = app_train.shape\n",
+    "print('row: %s' % row_counter, 'column: %s' % column_counter)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -101,7 +100,10 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "columns = app_train.columns\n",
+    "print('all columns: %s' % columns)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -117,7 +119,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "print('First four records: %s' % app_train.iloc[4])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -152,7 +156,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
