[ML]updated homework

--- a/Day_012_HW.ipynb
+++ b/Day_012_HW.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
        "4      0      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
        "4       3  35.0      0      0   8.0500"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,11 +311,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Linear Regression: 0.6992969681752557\n",
+      "Mean: 0.6947900320130562\n"
+     ]
+    }
+   ],
    "source": [
     "# 空值補 -1, 做羅吉斯迴歸\n",
     "df_m1 = df.fillna(-1)\n",
@@ -323,9 +330,19 @@
     "estimator = LogisticRegression()\n",
     "cross_val_score(estimator, train_X, train_Y, cv=5).mean()\n",
     "\n",
-    "\"\"\"\n",
-    "Your Code Here\n",
-    "\"\"\""
+    "# 做線性迴歸 / do Logistic regression\n",
+    "df_m0 = df.fillna(0)\n",
+    "train_X = df_m0[:train_num]\n",
+    "estimator = LogisticRegression()\n",
+    "linear_regression = cross_val_score(estimator, train_X, train_Y, cv=5).mean()\n",
+    "print(\"Linear Regression:\", linear_regression)\n",
+    "\n",
+    "# 空值補平均值\n",
+    "df_mn = df.fillna(df.mean())\n",
+    "train_X = df_mn[:train_num]\n",
+    "estimator = LogisticRegression()\n",
+    "mean_value = cross_val_score(estimator, train_X, train_Y, cv=5).mean()\n",
+    "print(\"Mean:\", mean_value)"
    ]
   },
   {
@@ -340,16 +357,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MinMaxScaler: 0.7004142866110099\n",
+      "StandardScaler: 0.6959136275186741\n"
+     ]
+    }
+   ],
    "source": [
-    "\"\"\"\n",
-    "Your Code Here\n",
-    "\"\"\""
+    "# 空值補平均值, 搭配最大最小化(best)\n",
+    "df = df.fillna(df.mean())\n",
+    "df_temp = MinMaxScaler().fit_transform(df)\n",
+    "train_X = df_temp[:train_num]\n",
+    "estimator = LogisticRegression()\n",
+    "min_max = cross_val_score(estimator, train_X, train_Y, cv=5).mean()\n",
+    "print(\"MinMaxScaler:\", min_max)\n",
+    "\n",
+    "# 搭配標準化\n",
+    "df_temp = StandardScaler().fit_transform(df)\n",
+    "train_X = df_temp[:train_num]\n",
+    "estimator = LogisticRegression()\n",
+    "standard_scaler = cross_val_score(estimator, train_X, train_Y, cv=5).mean()\n",
+    "print(\"StandardScaler:\", standard_scaler)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
