--- a/Day_011_HW.ipynb
+++ b/Day_011_HW.ipynb
@@ -322,7 +322,7 @@
     "# 1: 計算 AMT_ANNUITY 的 q0 - q100\n",
     "q_all = [np.percentile(app_train[~app_train['AMT_ANNUITY'].isnull()]['AMT_ANNUITY'], q=i) for i in range(100)]\n",
     "\n",
-    "pd.DataFrame({'q': list(range(100)),\n",
+    "pd.DataFrame({'q': list(range(101)),\n",
     "              'value': q_all})"
    ]
   },
@@ -336,7 +336,7 @@
    "source": [
     "# 2.1 將 NAs 以 q50 填補\n",
     "print(\"Before replace NAs, numbers of row that AMT_ANNUITY is NAs: %i\" % sum(app_train['AMT_ANNUITY'].isnull()))\n",
-    "q_50 = np.percentile(app_train[~app_train['AMT_ANNUITY'].isnull()]['AMT_ANNUITY'], q=50)\n",
+    "q_50 = app_train[app_train['AMT_ANNUITY'] == app_train['AMT_ANNUITY'].isnull()] = np.percentile(app_train[~app_train['AMT_ANNUITY'].isnull()]['AMT_ANNUITY'], q=50)\n",
     "app_train.loc[app_train['AMT_ANNUITY'].isnull(),'AMT_ANNUITY'] = q_50\n",
     "\n",
     "print(\"After replace NAs, numbers of row that AMT_ANNUITY is NAs: %i\" % sum(app_train['AMT_ANNUITY'].isnull()))"
